<resources>
    <string name="app_name">Motor Mate</string>
    <string name="action_settings">Settings</string>
    <string name="MainWelcome">Welcome to (appName)</string>
    <string name="MainSearch">Search</string>
    <string name="ListCname">CarName1</string>
    <string name="ListColour">CarColour1</string>
    <string name="ListDes">ShortDes1</string>
    <string name="menu_action_setting">settings</string>
    <string name="menu_action_aboutus">about us</string>
    <string name="action_listCars">List of cars</string>
    <string name="action_Search">Search</string>
    <string name="search_search">Search</string>
    <string name="search_title">What are you looking for?</string>
    <string name="Main_Search">Search</string>
    <string name="List_Name">Car name</string>
    <string name="List_Colour">Car colour</string>
    <string name="List_Des">Description</string>
    <string name="ListClickName">CarName</string>
    <string name="ListClickColour">CarColour</string>
    <string name="LictClickDes">CarDes</string>
    <string name="add_car">Add Car</string>
    <string name="AddTitle">List your car here</string>
    <string name="AddSubName">Car name</string>
    <string name="AddSubColour">Car colour</string>
    <string name="AddSubDes">Car description</string>
    <string name="AddButtonAdd">List your car</string>
    <string name="FirebaseBtn">Click to add</string>
    <string name="ListClickText">placeholder</string>
    <string name="add_SignIn">Sign In</string>
    <string name="add_Logout">Log Out</string>
    <string name="RecName">CarName</string>
    <string name="RecMake">CarMake</string>
    <string name="CarYear">CarYear</string>
    <string name="SignTitle">Sign In</string>
    <string name="SignUp" />
    <string name="SignBtn">Sign Up</string>
    <string name="UpTitle">Sign Up</string>
    <string name="UpEmail" />
    <string name="UpPass" />
    <string name="UpPassConf" />
    <string name="UpComplete">Sign Up</string>
    <string name="BtnDelete">Delete</string>
    <string name="addTname">Car Make</string>
    <string name="addTmodel">Car model</string>
    <string name="addTyear">Car Year</string>
    <string name="addTprice">Price</string>
    <string name="addTcolour">Car Colour</string>
    <string name="LayoutMake">Make:</string>
    <string name="textViewCar">MakeHere</string>
    <string name="LayoutModel">Model:</string>
    <string name="textViewModel">ModelHere</string>
    <string name="LayoutYear" />
    <string name="textViewYear">YearHere</string>
    <string name="LayoutColour">Colour:</string>
    <string name="textViewColour">ColourHere</string>
    <string name="LayOutYear">Year:</string>
    <string name="action_Home">Home</string>
    <string name="SignWhyNot">Dont Have An Account Why not sign up</string>
    <string name="ClickMake">Car Make:</string>
    <string name="ClickDisMake">MakeHere</string>
    <string name="ClickDisModel">ModelHere</string>
    <string name="ClickModel">Car Model:</string>
    <string name="ClickPrice">Price:</string>
    <string name="ClickDisPrice">PriceHere</string>
    <string name="ClickYear">Year:</string>
    <string name="ClickDisYear">YearHere</string>
    <string name="ClickColour">Colour:</string>
    <string name="ClickDisColour">ColourHere</string>
    <string name="ClickDes">Description:</string>
    <string name="ClickDisDes">DesHere</string>
    <string name="addTColour">Colour</string>
</resources>
