<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.app.carapp.Activity.MainActivity">
    <item
        android:id="@+id/action_Home"
        android:orderInCategory="100"
        android:title="@string/action_Home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_AddCar"
        android:orderInCategory="100"
        android:title="@string/add_car"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_SignIn"
        android:orderInCategory="100"
        android:title="@string/add_SignIn"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_LogOut"
        android:orderInCategory="100"
        android:title="@string/add_Logout"
        app:showAsAction="always" />
</menu>
