<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/LayoutMake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="139dp"
            android:layout_marginTop="40dp"
            android:text="@string/LayoutMake"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewMake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/LayoutMake"
            android:layout_marginEnd="115dp"
            android:text="@string/textViewCar" />

        <TextView
            android:id="@+id/LayoutModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/LayoutMake"
            android:layout_centerVertical="true"
            android:text="@string/LayoutModel"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewMake"
            android:layout_centerVertical="true"
            android:text="@string/textViewModel" />

        <TextView
            android:id="@+id/LayoutYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/LayoutMake"
            android:layout_below="@+id/LayoutModel"
            android:text="@string/LayOutYear"
            android:textColor="@android:color/black"
            tools:text="Year:" />

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewMake"
            android:layout_below="@+id/LayoutModel"
            android:text="@string/textViewYear" />

        <TextView
            android:id="@+id/LayoutColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_alignStart="@+id/LayoutMake"
            android:text="@string/LayoutColour"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_alignStart="@+id/textViewMake"
            android:text="@string/textViewColour" />
    </RelativeLayout>
</LinearLayout>
