<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/RecName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RecName"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
            android:id="@+id/RecMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecMake"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/RecYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CarYear"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>
        
    </android.support.v7.widget.CardView>
</LinearLayout>